fix: Abyss: Consistently skin dropmarkers and override background / border (for Windows)
(integrated from komodo (trunk) change 81507 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13478 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/window.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/window.less
@@ -66,6 +66,8 @@
 @menulist-appearance:                   disabled;
 @menulist-editable-box-appearance:      disabled;
 @menulist-dropmarker-appearance:        disabled;
+@menulist-dropmarker-background:        disabled;
+@menulist-dropmarker-border:            disabled;
 @textbox-background:                    disabled;
 @textbox-color:                         disabled;
 @textbox-box-shadow:                    disabled;
