--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -228,6 +228,8 @@ button:not([disabled]):not(.button-link):not([type="menu"]),
         dropmarker
         {
             -moz-appearance: @menulist-dropmarker-appearance;
+            background: @menulist-dropmarker-background;
+            border: @menulist-dropmarker-border;
         }
     }
 }
