--- a/src/modules/abyss_skin/skin/_config/window.less
+++ b/src/modules/abyss_skin/skin/_config/window.less
@@ -64,6 +64,8 @@
 @menulist-appearance:                   none !important;
 @menulist-editable-box-appearance:      none !important;
 @menulist-dropmarker-appearance:        none;
+@menulist-dropmarker-background:        transparent;
+@menulist-dropmarker-border:            none;
 @textbox-background:                    lighten(@window-background, 5%);
 @textbox-color:                         #F2F2F2;
 @textbox-box-shadow:                    none;
