fix: Skin: Style checkbox / radio menuitem images (so they show in Abyss)
(integrated from komodo (trunk) change 81509 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13480 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -42,8 +42,27 @@ button, toolbarbutton, menuitem
  * instead of list-style-image, which requires fixed dimensions */
 :not(menulist) > menupopup > :-moz-any(menuitem[selected="true"], menuitem[checked="true"]) > .menu-iconic-left .menu-iconic-icon
 {
-
     height: 16px;
+}
+
+menuitem[type="checkbox"]
+{
+    list-style-image: @icon-checkbox;
+
+    &[checked="true"]
+    {
+        list-style-image: @icon-checkbox-checked;
+    }
+}
+
+menuitem[type="radio"]
+{
+    list-style-image: @icon-radio;
+
+    &[checked="true"]
+    {
+        list-style-image: @icon-radio-selected;
+    }
 }
 
 /* Folder Icons */
