UI: Only set custom checkbox and radio icons on abyss, skin icon config now overrides iconset icon config
(integrated from komodo (trunk) change 81555 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13506 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -128,10 +128,10 @@
 @icon-status-valid:             url("@{icon-url-prefix}checkmark.png");
 @icon-status-checking:          url("@{icon-url-prefix}loop4.png");
 @icon-dropmarker:               url("@{icon-url-prefix}arrow-down2.png");
-@icon-checkbox:                 url("@{icon-url-prefix}checkbox-unchecked3.png");
-@icon-checkbox-checked:         url("@{icon-url-prefix}checkbox-checked2.png");
-@icon-radio:                    url("@{icon-url-prefix}radio-unchecked.png");
-@icon-radio-selected:           url("@{icon-url-prefix}radio-checked.png");
+@icon-checkbox:                 disabled;
+@icon-checkbox-checked:         disabled;
+@icon-radio:                    disabled;
+@icon-radio-selected:           disabled;
 
 /* Menu Specific Icons */
 @icon-menu-help:                url("@{icon-url-prefix}question2.png");
