--- a/src/modules/abyss_skin/skin/_config/icons.less
+++ b/src/modules/abyss_skin/skin/_config/icons.less
@@ -5,3 +5,8 @@
 @icon-folder-remote:            url("chrome://fugue/skin/icons/blue-folder-network.png");
 @icon-project:                  url("chrome://fugue/skin/icons/blue-folder-open-document.png");
 @icon-new-project:              @icon-project;
+
+@icon-checkbox:                 url("@{icon-url-prefix}checkbox-unchecked3.png");
+@icon-checkbox-checked:         url("@{icon-url-prefix}checkbox-checked2.png");
+@icon-radio:                    url("@{icon-url-prefix}radio-unchecked.png");
+@icon-radio-selected:           url("@{icon-url-prefix}radio-checked.png");
