--- a/src/chrome/komodo/skin/plat/shared/icons_depend.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_depend.less
@@ -1,2 +1,3 @@
+@import url("chrome://komodo/skin/plat/shared/_config/icons.less");
 @import url("chrome://komodo/skin/iconset/config.less");
 @import url("chrome://komodo/skin/_config/icons.less");
