fix: Skin: Don't show background images on menuitem's with custom list images
(integrated from komodo (trunk) change 81559 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13510 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -130,8 +130,10 @@
 @icon-dropmarker:               url("@{icon-url-prefix}arrow-down2.png");
 @icon-checkbox:                 disabled;
 @icon-checkbox-checked:         disabled;
+@icon-checkbox-background:      disabled;
 @icon-radio:                    disabled;
 @icon-radio-selected:           disabled;
+@icon-radio-background:         disabled;
 
 /* Menu Specific Icons */
 @icon-menu-help:                url("@{icon-url-prefix}question2.png");
