--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -53,6 +53,11 @@ menuitem[type="checkbox"]
     {
         list-style-image: @icon-checkbox-checked;
     }
+
+    .menu-iconic-left
+    {
+        background: @icon-checkbox-background;
+    }
 }
 
 menuitem[type="radio"]
@@ -62,6 +67,11 @@ menuitem[type="radio"]
     &[checked="true"]
     {
         list-style-image: @icon-radio-selected;
+    }
+
+    .menu-iconic-left
+    {
+        background: @icon-radio-background;
     }
 }
 
