fix: UI: Prefs > Lang > HTML - menulist has weird height http://bugs.activestate.com/show_bug.cgi?id=100120
(integrated from komodo (trunk) change 81561 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13512 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/window.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/window.less
@@ -68,6 +68,7 @@
 @menulist-dropmarker-appearance:        disabled;
 @menulist-dropmarker-background:        disabled;
 @menulist-dropmarker-border:            disabled;
+@menulist-dropmarker-display:           disabled;
 @textbox-background:                    disabled;
 @textbox-color:                         disabled;
 @textbox-box-shadow:                    disabled;
