--- a/src/modules/abyss_skin/skin/_config/window.less
+++ b/src/modules/abyss_skin/skin/_config/window.less
@@ -66,6 +66,7 @@
 @menulist-dropmarker-appearance:        none;
 @menulist-dropmarker-background:        transparent;
 @menulist-dropmarker-border:            none;
+@menulist-dropmarker-display:           -moz-box;
 @textbox-background:                    lighten(@window-background, 5%);
 @textbox-color:                         #F2F2F2;
 @textbox-box-shadow:                    none;
