fix: Abyss: Debug pane not styled properly
(integrated from komodo (trunk) change 81565 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13515 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/gnome/tabs.less
+++ b/src/chrome/komodo/skin/plat/gnome/tabs.less
@@ -1,7 +1,7 @@
 @import url("chrome://komodo/skin/plat/shared/tabs.less");
 
 /* Tab Tweaks */
-.native tabs {
+ .native tabs:not(.tabs-bottom) {
   height: auto;
 
   tab:first-child {
