fix: Skin: Fix checkbox / radio focus / selection appearance http://bugs.activestate.com/show_bug.cgi?id=100080
(integrated from komodo (trunk) change 81603 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13524 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/window.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/window.less
@@ -83,6 +83,7 @@
 @checkbox-appearance:                   disabled;
 @checkbox-color:                        disabled;
 @checkbox-background-hover:             disabled;
+@checkbox-label-box-appearance:         disabled;
 @checkbox-check-spacer-appearance:      disabled;
 @checkbox-check-spacer-border:          disabled;
 @checkbox-check-spacer-background:      disabled;
@@ -95,6 +96,7 @@
 @radio-appearance:                   disabled;
 @radio-color:                        disabled;
 @radio-background-hover:             disabled;
+@radio-label-box-appearance:         disabled;
 @radio-check-appearance:             disabled;
 @radio-check-border:                 disabled;
 @radio-check-background:             disabled;
