--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -295,6 +295,11 @@ checkbox
         }
     }
 
+    .checkbox-label-box
+    {
+        -moz-appearance: @checkbox-label-box-appearance;
+    }
+
     &[disabled="true"]
     {
         opacity: @checkbox-disabled-opacity;
@@ -327,6 +332,11 @@ radio
         {
             visibility: @radio-check-image-visibility;
         }
+    }
+
+    .radio-label-box
+    {
+        -moz-appearance: @radio-label-box-appearance;
     }
 
     &[selected="true"] .radio-spacer-box
