--- a/src/modules/abyss_skin/skin/_config/window.less
+++ b/src/modules/abyss_skin/skin/_config/window.less
@@ -80,6 +80,7 @@
 @checkbox-appearance:                   none;
 @checkbox-color:                        @window-color;
 @checkbox-background-hover:             darken(@window-background, 2%);
+@checkbox-label-box-appearance:         none;
 @checkbox-check-spacer-appearance:      none;
 @checkbox-check-spacer-border:          0;
 @checkbox-check-spacer-background:      transparent;
@@ -91,6 +92,7 @@
 @radio-appearance:                   none;
 @radio-color:                        @window-color;
 @radio-background-hover:             darken(@window-background, 2%);
+@radio-label-box-appearance:         none;
 @radio-check-appearance:             none;
 @radio-check-border:                 0;
 @radio-check-background:             @icon-radio;
