fix: UI: Bloated / ugly checkmark icon on customize dialog http://bugs.activestate.com/show_bug.cgi?id=99195
(integrated from komodo (trunk) change 81604 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13525 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/dialogs/customizeToolbar.css
+++ b/src/chrome/komodo/skin/dialogs/customizeToolbar.css
@@ -1,8 +1,3 @@
-treechildren::-moz-tree-image(col-checkbox, checked) {
-    list-style-image: url("chrome://global/skin/checkbox/cbox-check-dis.gif");
-}
-
-treechildren::-moz-tree-image(col-checkbox, checked, parent-checked),
-treechildren::-moz-tree-image(col-checkbox, checked, no-parent) {
-    list-style-image: url("chrome://global/skin/checkbox/cbox-check.gif");
+#colCheck {
+    width: 22px;
 }
