--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -134,6 +134,8 @@
 @icon-radio:                    disabled;
 @icon-radio-selected:           disabled;
 @icon-radio-background:         disabled;
+@icon-checkbox-small:           url("@{icon-url-prefix}checkmark2.png");
+@icon-checkbox-small-checked:   url("@{icon-url-prefix}checkmark.png");
 
 /* Menu Specific Icons */
 @icon-menu-help:                url("@{icon-url-prefix}question2.png");
