fix: Skin: tabpanels suddenly have borders on windows
(integrated from komodo (trunk) change 81605 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13526 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/panes.less
+++ b/src/chrome/komodo/skin/plat/shared/panes.less
@@ -14,6 +14,7 @@ page.widget .toolbar-background
 ko-pane tabpanels
 {
     background-color: transparent !important;
+    border: 0;
     padding: 0px;
     margin: 0px;
 }
