fix: Abyss: white line beside tabbox http://bugs.activestate.com/show_bug.cgi?id=100074
(integrated from komodo (trunk) change 81606 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13527 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/tabs.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/tabs.less
@@ -28,6 +28,7 @@
 @tab-background:                        disabled;
 @tab-background-vertical:               disabled;
 @tab-box-shadow-vertical:               none;
+@tab-spacer-border:                     disabled;
 
 @tab-selected-border:                   @tab-border;
 @tab-selected-background:               @tab-background;
