--- a/src/chrome/komodo/skin/plat/shared/tabs.less
+++ b/src/chrome/komodo/skin/plat/shared/tabs.less
@@ -48,6 +48,11 @@ tabbox#tabbed-view:not(.tabs-bottom) tabpanels
     padding: 0;
 }
 
+spacer.tabs-left, spacer.tabs-right
+{
+    border: @tab-spacer-border;
+}
+
 tabs:not(.tabs-bottom)
 {
     border: none;
