--- a/src/modules/abyss_skin/skin/_config/tabs.less
+++ b/src/modules/abyss_skin/skin/_config/tabs.less
@@ -28,6 +28,7 @@
 @tab-background:                        -moz-linear-gradient(top, rgba(39,40,42,0.1) 15%, rgba(0,0,0,0.2) 100%);
 @tab-background-vertical:               @tab-background;
 @tab-box-shadow-vertical:               @tab-box-shadow;
+@tab-spacer-border:                     none;
 
 @tab-selected-border:                   @tab-border;
 @tab-selected-background:               -moz-linear-gradient(top, rgba(39,40,42,0.1) 5%, rgba(80, 157, 212, 0.5) 100%);
