fix: Skin: Fix ugly color picker buttons and embedded icon buttons
(integrated from komodo (trunk) change 81607 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13528 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/bindings/colorpicker.css
+++ b/src/chrome/komodo/skin/bindings/colorpicker.css
@@ -55,6 +55,26 @@ colorpicker[type="button-flat"] {
     height: 16px;
 }
 
+/* Without the button appearance is more compatible across different skins
+ * plus it acutally looks better 
+ */
+colorpicker[type="button"] {
+    -moz-appearance: none;
+    width: 16px !important;
+    height: 16px !important;
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+colorpicker[type="button"]:hover {
+    opacity: 1.0;
+}
+
+colorpicker[type="button"] .colorpicker-button-colorbox {
+    border-radius: 2px;
+    border-color: grey;
+}
+
 colorpicker[type="button-flat"]:hover {
     border: 1px solid white;
 }
