--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -99,7 +99,7 @@
 @icon-help:                     url("chrome://komodo/skin/images/help.png");
 @icon-more:                     url("@{icon-url-prefix}arrow-down2.png");
 @icon-less:                     url("@{icon-url-prefix}arrow-up2.png");
-@icon-arrow-right-6x3:          url("chrome://komodo/skin/images/arrow_right_6x3.png");
+@icon-arrow-right-small:        url("@{icon-url-prefix}arrow-right3.png");
 @icon-preview:                  url("chrome://komodo/skin/global/images/preview.png");
 @icon-configure:                url("chrome://komodo/skin/global/images/cog_edit.png");
 @icon-properties:               url("chrome://komodo/skin/global/images/cog.png");
