--- a/src/chrome/komodo/skin/plat/shared/_config/window.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/window.less
@@ -41,11 +41,13 @@
 @button-border:                         disabled;
 @button-text-shadow:                    disabled;
 @button-color-disabled:                 disabled;
+@button-internal-border:                disabled;
 
 @button-background-hover:               disabled;
 @button-color-hover:                    disabled;
 @button-border-hover:                   disabled;
 @button-text-shadow-hover:              disabled;
+@button-internal-border-hover:          disabled;
 
 @button-background-active:              disabled;
 @button-color-active:                   disabled;
