--- a/src/modules/abyss_skin/skin/_config/window.less
+++ b/src/modules/abyss_skin/skin/_config/window.less
@@ -43,11 +43,13 @@
 @button-border:                         1px solid lighten(@main-border-color, 15%);
 @button-text-shadow:                    0 1px 0 rgba(0, 0, 0, 0.7);
 @button-color-disabled:                 fadeout(@button-color, 60%);
+@button-internal-border:                none;
 
 @button-background-hover:               -moz-linear-gradient(top, rgba(80, 157, 212, 0.05) 15%, rgba(80, 157, 212, 0.2) 100%);
 @button-color-hover:                    @button-color;
 @button-border-hover:                   1px solid lighten(@main-border-color, 15%);
 @button-text-shadow-hover:              0 1px 0 rgba(0, 0, 0, 0.7);
+@button-internal-border-hover:          none;
 
 @button-background-active:              -moz-linear-gradient(top, rgba(80, 157, 212, 0.05) 15%, rgba(80, 157, 212, 0.1) 100%);
 @button-color-active:                   @button-color-hover;
