fix: Abyss: Go to line and similar panels not being styled http://bugs.activestate.com/show_bug.cgi?id=100171
(integrated from komodo (trunk) change 81656 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13536 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/menus.less
+++ b/src/chrome/komodo/skin/plat/shared/menus.less
@@ -71,12 +71,15 @@ menubar
 
 /* Menu Popups */
 
-menupopup
+menupopup, panel
 {
     -moz-appearance: @menupopup-appearance;
     background: @menupopup-background;
     border: @menupopup-border;
+}
 
+menupopup
+{
     menuitem, menu
     {
         -moz-appearance: @menupopup-menuitem-appearance !important;
