fix: Skin: Disabled autocomplete fields not styled properly
(integrated from komodo (trunk) change 81658 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13538 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -215,6 +215,11 @@ button:not([disabled="true"]):not(.button-link):not([type="menu"]),
         border: @textbox-border-disabled;
     }
 
+    &[type="autocomplete"][disabled="true"] > hbox
+    {
+        background-color: @textbox-background-disabled;
+    }
+
     &:-moz-any(textbox)
     {
         -moz-appearance: @textbox-appearance;
