fix: Skin: Checkbox styling for menuitems overriding language file icons http://bugs.activestate.com/show_bug.cgi?id=100167
(integrated from komodo (trunk) change 81659 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13539 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -47,7 +47,7 @@ button, toolbarbutton, menuitem
 
 /* Check / Radio items */
 
-menuitem[type="checkbox"]
+menuitem[type="checkbox"]:not(.languageicon)
 {
     list-style-image: @icon-checkbox;
 
