fix: Abyss: Tree checkboxes not styled properly http://bugs.activestate.com/show_bug.cgi?id=100123
(integrated from komodo (trunk) change 81660 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13540 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -77,6 +77,10 @@ menuitem[type="radio"]
     }
 }
 
+/* Tree Checkboxes */
+
+/* Small */
+
 treechildren::-moz-tree-image(col-checkbox)
 {
     list-style-image: @icon-checkbox-small;
@@ -102,6 +106,28 @@ treechildren::-moz-tree-image(col-checkbox, checked, no-parent)
 {
     list-style-image: @icon-checkbox-small-checked;
 }
+
+/* Regular */
+
+treechildren::-moz-tree-checkbox
+{
+    list-style-image: @icon-checkbox !important;
+}
+
+treechildren::-moz-tree-checkbox(checked)
+{
+    list-style-image: @icon-checkbox-checked !important;
+}
+
+treechildren::-moz-tree-checkbox(nocheckbox),
+treechildren::-moz-tree-checkbox(sccLoading),
+treechildren::-moz-tree-checkbox(sccError),
+treechildren::-moz-tree-checkbox(syncLoading),
+treechildren::-moz-tree-checkbox(syncError)
+{
+    list-style-image: none !important;
+}
+
 
 
 /* Folder Icons */
