fix: Skin: Checkbox using wrong image when disabled http://bugs.activestate.com/show_bug.cgi?id=100026
git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13544 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -305,11 +305,11 @@ checkbox
         height: 17px;
 
         border: @checkbox-check-border;
-        background: @checkbox-check-background;
+        background: @checkbox-check-background !important;
         
         &[checked="true"]
         {
-            background: @checkbox-check-background-checked;
+            background: @checkbox-check-background-checked !important;
         }
     }
 
