fix: Abyss: Use blue breadcrumb folder icons
(integrated from komodo (trunk) change 81667 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13547 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/modules/abyss_skin/skin/_config/icons.less
+++ b/src/modules/abyss_skin/skin/_config/icons.less
@@ -1,4 +1,5 @@
 @icon-folder-open:              url("chrome://fugue/skin/icons/blue-folder-open.png");
+@icon-native-folder:            url("chrome://fugue/skin/icons/blue-folder.png");
 @icon-folder-closed:            url("chrome://fugue/skin/icons/blue-folder.png");
 @icon-folder-remote:            url("chrome://fugue/skin/icons/blue-folder-network.png");
 @icon-project:                  url("chrome://fugue/skin/icons/blue-folder-open-document.png");
@@ -12,3 +13,7 @@
 @icon-radio-background:         none;
 
 @icon-menu-arrow:               url("@{icon-url-prefix}arrow-right3.png");
+
+/* Breadcrumbs */
+@icon-breadcrumb-project:       @icon-project;
+@icon-breadcrumb-folder:        @icon-native-folder;
